@@ -3,7 +3,8 @@ package br.com.api.mgdexpress.MGD.EXPRESS.controller;
 import br.com.api.mgdexpress.MGD.EXPRESS.model.historico.*;
 import br.com.api.mgdexpress.MGD.EXPRESS.model.historico.motoboy.DadosHistoricoMotoboy;
 import br.com.api.mgdexpress.MGD.EXPRESS.repository.HistoricoRepository;
-import br.com.api.mgdexpress.MGD.EXPRESS.services.TokenService;
+import br.com.api.mgdexpress.MGD.EXPRESS.service.MesUtil;
+import br.com.api.mgdexpress.MGD.EXPRESS.service.TokenService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -12,23 +13,15 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 
-import java.math.BigDecimal;
 import java.time.Month;
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Map;
-import java.util.concurrent.atomic.AtomicReference;
+import java.time.format.TextStyle;
+import java.util.*;
+
 import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/historico")
 public class HistoricoController {
-
-    List<ListaDeMesHistorico> listaDeMesHistoricos = new ArrayList<>();
-    List<DadosHistoricoListMotoboy> listaMotoboys = new ArrayList<>();
-    float totalRecebido =0.0f;
-    Month ultimoMes;
 
     @Autowired
     private HistoricoRepository historicoRepository;
@@ -46,7 +39,7 @@ public class HistoricoController {
         List<DadosHistoricoListMotoboy> historicos = historicoRepository.BuscarMotoboy(id)
                 .stream()
                 .map(DadosHistoricoListMotoboy::new)
-                .collect(Collectors.toList());
+                .toList();
 
         // Agrupa os históricos por ano e mês
         Map<Integer, Map<Month, List<DadosHistoricoListMotoboy>>> historicosAgrupadosPorAnoEMes = historicos.stream()
@@ -59,9 +52,12 @@ public class HistoricoController {
         List<AnoComMesesHistorico> anosComMesesHistoricos = historicosAgrupadosPorAnoEMes.entrySet().stream()
                 .map(entryAno -> {
                     List<MesComHistorico> mesesComHistoricos = entryAno.getValue().entrySet().stream()
-                            .map(entryMes -> new MesComHistorico(entryMes.getKey(),
-                                    entryMes.getValue().stream().mapToDouble(h -> h.valor().doubleValue()).sum(),
-                                    entryMes.getValue()))
+                            .map(entryMes ->{
+                                Month mes = entryMes.getKey();
+                                String nomeMes = MesUtil.obterNomeMes(mes);
+                                double somaValores = entryMes.getValue().stream().mapToDouble(h -> h.valor().doubleValue()).sum();
+                                return new MesComHistorico(nomeMes, somaValores, entryMes.getValue());
+                            })
                             .sorted(Comparator.comparing(MesComHistorico::mes))
                             .collect(Collectors.toList());
 
@@ -101,6 +97,10 @@ public class HistoricoController {
     public ResponseEntity<Page<DadosHistoricoLista>> Listar(@PageableDefault(size = 10)Pageable pageable){
         var historicos = historicoRepository.findAll(pageable).map(DadosHistoricoLista::new);
         return ResponseEntity.ok(historicos);
+    }
+
+    public static String obterNomeMes(Month month) {
+        return month.getDisplayName(TextStyle.FULL, new Locale("pt", "BR"));
     }
 
 
